# Therminal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md
Therminal/assets/shaders/: TextShader.frag  TextShader.vert
Therminal/src/: ASanFlags.cpp  Assert.hpp  Common.hpp  Defines.hpp  Headers.hpp  Main.cpp  Misc.hpp  Types.hpp
Therminal/src/application/: Application.cpp  Application.hpp  Signal.hpp
Therminal/src/char/: Char.hpp  Char.inl  Locale.hpp
Therminal/src/col/: Color.hpp
Therminal/src/core/: core_common.h  pty.c  pty.h  tty_man.c  tty_man.h
Therminal/src/display/: Cell.cpp  Cell.hpp  Color.hpp  Row.cpp  Row.hpp
Therminal/src/encode/: Char.hpp
Therminal/src/ev/: BaseEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WinEvent.hpp
Therminal/src/filesys/: Filepath.cpp  Filepath.hpp  ReadFile.hpp
Therminal/src/gl/: Atlas.cpp  Atlas.hpp  RenderFormat.cpp  RenderFormat.hpp  Shader.cpp  Shader.hpp  TextRender.cpp  TextRender.hpp  Utils.hpp
Therminal/src/input/: InputQueue.cpp
Therminal/src/io/: IOBridge.cpp  IOBridge.hpp  InputBuffer.hpp  InputQueue.cpp  InputQueue.hpp  InputTranslator.cpp  InputTranslator.hpp  Keymap.hpp  OutputBuffer.hpp  OutputParser.cpp  OutputParser.hpp  OutputTranslator.hpp  Worker.cpp  Worker.hpp
Therminal/src/logger/: Log.hpp  Log.inl
Therminal/src/memory/: CircBuff.hpp  CircBuff.inl  Memory.hpp  Simd.hpp
Therminal/src/screen/: Color.hpp  Grid.cpp  Grid.hpp  Line.cpp  Line.hpp
Therminal/src/shell/: Shell.cpp  Shell.hpp
Therminal/src/window/: Window.cpp  Window.hpp
src/: Assert.hpp  Defines.hpp  Main.cpp  Misc .hpp
src/core/: pty.h  tty_man.c  tty_man.h
